syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.validator;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "validator/validator.proto";
import "validator/last_validator_power.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/validator/types";

import "cosmos_proto/cosmos.proto";

// Query defines the gRPC querier service.
service Query {
    // Queries a validator by index.
	rpc Validator(QueryGetValidatorRequest) returns (QueryGetValidatorResponse) {
		option (google.api.http).get = "/dcl/validator/nodes/{owner}";
	}

	// Queries a list of validator items.
	rpc ValidatorAll(QueryAllValidatorRequest) returns (QueryAllValidatorResponse) {
		option (google.api.http).get = "/dcl/validator/nodes";
	}

// Queries a lastValidatorPower by index.
	rpc LastValidatorPower(QueryGetLastValidatorPowerRequest) returns (QueryGetLastValidatorPowerResponse) {
		option (google.api.http).get = "/dcl/validator/last-powers/{owner}";
	}

	// Queries a list of lastValidatorPower items.
	rpc LastValidatorPowerAll(QueryAllLastValidatorPowerRequest) returns (QueryAllLastValidatorPowerResponse) {
		option (google.api.http).get = "/dcl/validator/last-powers";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetValidatorRequest {
	  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message QueryGetValidatorResponse {
	Validator validator = 1 [(gogoproto.nullable) = false];
}

message QueryAllValidatorRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllValidatorResponse {
	repeated Validator validator = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetLastValidatorPowerRequest {
	  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

}

message QueryGetLastValidatorPowerResponse {
	LastValidatorPower lastValidatorPower = 1 [(gogoproto.nullable) = false];
}

message QueryAllLastValidatorPowerRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLastValidatorPowerResponse {
	repeated LastValidatorPower lastValidatorPower = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
